Skip to content

full screen does not work in 2.0.2 on Mac OS from the http interface

Full screen support through the http interface on Mac OS in version 2 never worked properly. In version 2.0 and 2.0.1 you could enter fullscreen but not exit it using the http interface (localhost:8080/requests/status.xml?commnand=fullscreen), however by turning on the setting "use the native full screen mode on OS X Lion" it would work.

In the current version, 2.0.2, full screen does not work at all any more on Mac OS from the http interface. This breaks all smartphone remote control apps.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information