macosx: fix fullscreen set by vout only (e.g. over http interface)

close #7117